# py_web_hw-4

./: Dockerfile  index.html  main.py  pyproject.toml
storage/: data.json
